# MODULES OF NEO BUILD SYSTEM
# Detect the platform
if(WIN32)
    message(STATUS "[System] Window platform")
    set(LM_PLATFORM "LM_PLATFORM_WINDOWS")
    set(LM_POSIX_SUPPORT "LM_WIN32")
elseif(APPLE)
    set(LM_POSIX_SUPPORT "LM_PLATFORM_UNIX") 
    if(IOS)
        message(STATUS "[System] IOS platform")
        set(LM_PLATFORM "LM_PLATFORM_IOS")
    else()
        message(STATUS "[System] MacOS platform")
        set(LM_PLATFORM "LM_PLATFORM_MACOS")
    endif()
elseif(ANDROID)
message(STATUS "[System] Android platform")
    set(LM_POSIX_SUPPORT "LM_PLATFORM_UNIX") 
    set(LM_PLATFORM "LM_PLATFORM_ANDROID")
elseif(LINUX)
    message(STATUS "[System] Linux platform")
    set(LM_POSIX_SUPPORT "LM_PLATFORM_UNIX") 
    set(LM_PLATFORM "LM_PLATFORM_LINUX")
elseif(UNIX)
    message(STATUS "[System] Unix platform")
    set(LM_POSIX_SUPPORT "LM_PLATFORM_UNIX") 
    set(LM_PLATFORM "LM_PLATFORM_UNIX")
else()
    message(FATAL_ERROR "[System] Unknown platform!")
endif()


add_subdirectory(ncore)